load("//bazel:py_rules.bzl", "py_library", "py_package", "py_test")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "registry_impl",
    srcs = [
        "registry.py",
    ],
    deps = [
        "//snowflake/ml/_internal:telemetry",
        "//snowflake/ml/_internal/utils:identifier",
        "//snowflake/ml/_internal/utils:sql_identifier",
        "//snowflake/ml/model",
        "//snowflake/ml/model:event_handler",
        "//snowflake/ml/model:model_signature",
        "//snowflake/ml/model:type_hints",
        "//snowflake/ml/monitoring:model_monitor",
        "//snowflake/ml/monitoring/_manager:model_monitor_manager",
        "//snowflake/ml/monitoring/entities:entities_lib",
        "//snowflake/ml/registry/_manager:model_manager",
    ],
)

py_library(
    name = "registry",
    srcs = [
        "__init__.py",
    ],
    deps = [
        ":registry_impl",
    ],
)

py_test(
    name = "registry_test",
    srcs = [
        "registry_test.py",
    ],
    tags = ["feature:model_registry"],
    deps = [
        ":registry_impl",
        "//snowflake/ml/_internal:platform_capabilities",
        "//snowflake/ml/model",
        "//snowflake/ml/test_utils:mock_data_frame",
        "//snowflake/ml/test_utils:mock_progress",
        "//snowflake/ml/test_utils:mock_session",
    ],
)

py_test(
    name = "package_visibility_test",
    srcs = ["package_visibility_test.py"],
    tags = ["feature:model_registry"],
    deps = [
        ":registry",
    ],
)

py_package(
    name = "model_registry_pkg",
    packages = ["snowflake.ml"],
    deps = [
        ":registry",
    ],
)
