load("@rules_python//python:packaging.bzl", "py_package")
load("//bazel:py_rules.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "init",
    srcs = [
        "__init__.py",
    ],
)

py_library(
    name = "snowpandas",
    srcs = [
        "imports.py",
        "initializer.py",
        "patch.py",
    ],
    deps = [
        ":init",
        "//snowflake/ml/_internal:file_utils",
        "//snowflake/ml/_internal/utils:identifier",
    ],
)

py_package(
    name = "snowpandas_pkg",
    packages = ["snowflake.ml"],
    deps = [
        ":snowpandas",
    ],
)
