load("@rules_python//python:packaging.bzl", "py_package")
load("//bazel:py_rules.bzl", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "connection_params",
    srcs = ["connection_params.py"],
)

py_test(
    name = "connection_params_test",
    srcs = ["connection_params_test.py"],
    deps = [
        ":connection_params",
    ],
)

py_library(
    name = "sparse",
    srcs = ["sparse.py"],
)

py_test(
    name = "sparse_test",
    srcs = ["sparse_test.py"],
    deps = [
        ":sparse",
    ],
)

py_package(
    name = "utils_pkg",
    packages = ["snowflake.ml"],
    deps = [
        ":connection_params",
        ":sparse",
    ],
)
