load("//bazel:py_rules.bzl", "py_library", "py_package", "py_test")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "authentication",
    srcs = ["authentication.py"],
    deps = [
        "//snowflake/ml/_internal/utils:jwt_generator",
    ],
)

py_test(
    name = "authentication_test",
    srcs = ["authentication_test.py"],
    tags = ["feature:core"],
    deps = [
        ":authentication",
    ],
)

py_library(
    name = "connection_params",
    srcs = ["connection_params.py"],
)

py_library(
    name = "sparse",
    srcs = ["sparse.py"],
)

py_test(
    name = "sparse_test",
    srcs = ["sparse_test.py"],
    tags = ["feature:core"],
    deps = [
        ":sparse",
    ],
)

py_library(
    name = "sql_client",
    srcs = ["sql_client.py"],
    deps = [],
)

py_test(
    name = "sql_client_test",
    srcs = ["sql_client_test.py"],
    tags = ["feature:core"],
    deps = [
        ":sql_client",
    ],
)

py_library(
    name = "html_utils",
    srcs = ["html_utils.py"],
    deps = [],
)

py_library(
    name = "stage_file",
    srcs = ["stage_file.py"],
    deps = [],
)

py_test(
    name = "stage_file_test",
    srcs = ["stage_file_test.py"],
    tags = ["feature:model_registry"],
    deps = [
        ":stage_file",
        "//snowflake/ml/test_utils:mock_session",
    ],
)

py_package(
    name = "utils_pkg",
    packages = ["snowflake.ml"],
    deps = [
        ":authentication",
        ":connection_params",
        ":html_utils",
        ":sparse",
        ":sql_client",
        ":stage_file",
        "//snowflake/ml/_internal/utils:snowflake_env",  # Mitigate BuildSnowML failure
    ],
)
